[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameActions/ViewIntelPackages/UI/Icons/RadarIcon.bmp" type="Texture" id=1]
[ext_resource path="res://GameActions/ViewIntelPackages/UI/ProposedIntelWidget.gd" type="Script" id=2]
[ext_resource path="res://Shaders/CountryColour.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/replacementColour = Color( 0, 0, 0, 1 )
shader_param/maskColour = Color( 1, 0, 1, 1 )

[node name="ProposedIntelWidget" type="Control"]
script = ExtResource( 2 )

[node name="WidgetHBox" type="VBoxContainer" parent="."]

[node name="IntelIcon" type="TextureRect" parent="WidgetHBox"]
material = SubResource( 1 )
margin_right = 112.0
margin_bottom = 100.0
texture = ExtResource( 1 )

[node name="ButtonsHBox" type="HBoxContainer" parent="WidgetHBox"]
margin_top = 104.0
margin_right = 112.0
margin_bottom = 124.0

[node name="AcceptButton" type="Button" parent="WidgetHBox/ButtonsHBox"]
margin_right = 56.0
margin_bottom = 20.0
text = "Accept"

[node name="RejectButton" type="Button" parent="WidgetHBox/ButtonsHBox"]
margin_left = 60.0
margin_right = 112.0
margin_bottom = 20.0
text = "Reject"

[connection signal="pressed" from="WidgetHBox/ButtonsHBox/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="WidgetHBox/ButtonsHBox/RejectButton" to="." method="_on_RejectButton_pressed"]
